<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Note</string>
    <!-- Main Screen-->
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>

    <!-- New Note Screen-->
    <string name="action_insert_picture">Insert Picture</string>
    <string name="action_choose_color">Choose Color</string>
    <string name="action_done">Done</string>
    <string name="action_new">New Note</string>

    <string name="title_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="time_string">22/03/2016 10:10</string>
    <string name="alarm_name">Alarm</string>

    <!-- Open Note Screen-->
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
    </string>
    <string name="action_previous">Previous</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
</resources>
