<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_insert_picture"
        android:title="@string/action_insert_picture"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_choose_color"
        android:title="@string/action_choose_color"
        android:icon="@drawable/ic_apps"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_done"
        android:title="@string/action_done"
        android:icon="@drawable/ic_check"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@drawable/ic_note_add"
        app:showAsAction="ifRoom"/>

</menu>