<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/ll_main_new"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/t_new_note"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>
    <GridView
        android:id="@+id/gv_insert_picture"
        android:numColumns="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/time_string"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/et_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/note_hint"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/et_note"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/alarm_height">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_alarm"/>
            <TextView
                android:id="@+id/tv_alarm"
                android:textSize="@dimen/text_alarm_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/alarm_name"
                android:onClick="tvAlarmOnClick"/>
            <LinearLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/ll_set_alarm">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:inputType="date"
                    android:focusable="false"
                    android:onClick="etDateOnClick"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/et_date"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:inputType="time"
                    android:focusable="false"
                    android:onClick="etTimeOnClick"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/et_time"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:layout_gravity="center_vertical"
                    android:onClick="ivCloseOnClick"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>